--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,26 +19,26 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Sprites/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Themes/", "res://Themes/Styles/", "res://Scripts/", "res://Scenes/", "res://Objects/", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://ExcelTemplates/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Themes/", "res://Themes/Styles/", "res://Scripts/", "res://Scenes/", "res://Objects/", "res://Assets/", "res://Assets/Sprites/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/TimeSheetEditor.tscn", "res://Scenes/TimeSpanBlockEditor.tscn", "res://Scenes/TimeSheetSelector.tscn", "res://Scenes/Settings.tscn")
+open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/Settings.tscn", "res://Scenes/TimeSpanBlockEditor.tscn", "res://Scenes/TimeSheetSelector.tscn", "res://Scenes/TimeSheetEditor.tscn", "res://Objects/TimeSheetButton.tscn")
 current_scene="res://Scenes/TimeSheetSelector.tscn"
-center_split_offset=-252
+center_split_offset=-440
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://export_presets.cfg"]
 selected_script=""
-open_help=["CompressedTexture2D", "DisplayServer", "PopupMenu"]
+open_help=["CompressedTexture2D", "DisplayServer", "EditorExportPlatformAndroid", "PopupMenu"]
 script_split_offset=70
 list_split_offset=0
 
