--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Godot/Godot.exe"
+executable_path="F:/Godot/Godot.exe"
 use_advanced_connections=false
 show_compatible_methods_only=true
 show_script_methods_only=true
