--- a/Stundenzettel.csproj
+++ b/Stundenzettel.csproj
@@ -6,6 +6,6 @@
     <EnableDynamicLoading>true</EnableDynamicLoading>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="EPPlus" Version="7.0.3" />
+    <PackageReference Include="ClosedXML" Version="0.102.1" />
   </ItemGroup>
 </Project>
