--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Merge to Backup Branch
       if: success()
       run: |
-        git checkout backup
+        git checkout -B backup
         git fetch --all
         git reset --hard origin/main
         git push -f origin backup
