--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Settings.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/TimeSpanBlockEditor.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Themes/", "res://Themes/Styles/", "res://Scripts/", "res://Scenes/", "res://Objects/", "res://Assets/", "res://Assets/Sprites/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Settings.tscn")
-current_scene="res://Scenes/Settings.tscn"
+open_scenes=PackedStringArray("res://Scenes/Settings.tscn", "res://Scenes/TimeSheetSelector.tscn", "res://Scenes/TimeSheetEditor.tscn", "res://Scenes/TimeSpanBlockEditor.tscn")
+current_scene="res://Scenes/TimeSpanBlockEditor.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -52,7 +52,7 @@ selected_shader=""
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=true
+log_filter_1=false
 log_filter_3=true
 log_filter_4=true
 collapse=false
